[package]
name = "tippytap"
description = "Library to help write Tip tooltips"
license = "MIT OR Apache-2.0"
keywords = ["tip", "tooltip"]
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
repository = "https://github.com/hobofan/tippytap"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
